# CXX

./: .gitignore  SetupBoost.txt  deploy_setup.sh  id_rsa  id_rsa.pub
StartBoost/: StartBoost.pro  main.cpp
core-concept/: deadlock.cpp  exception.cpp  function_pointer.cpp  lambda.cpp  pair-tuples.cpp  pub_sub.cpp  semaphore.cpp  std-bind-function.cpp  template.cpp  type_info.cpp
core-concept/OOP/: constructor.cpp
project/Cmake/: CMakeLists.txt
project/Cmake/asio/: CMakeLists.txt
project/Cmake/asio/src/: main.cpp
project/Cmake/boost/: CMakeLists.txt  vcpkg.json
project/Cmake/chat/: CMakeLists.txt  Client.cpp  Server.cpp  Signal.cpp  run.sh
project/Cmake/chat/include/: signal.hpp
project/Cmake/chatSocket/: CMakeLists.txt  Server.cpp  client.cpp  client_udp.cpp  client_udp_local.cpp  server.cpp  server_udp.cpp  server_udp_local.cpp
project/Cmake/demo/: CMakeLists.txt  run.sh
project/Cmake/demo/include/: main.h
project/Cmake/demo/src/: main.cpp
project/Cmake/ipc/: CMakeLists.txt  run.sh
project/Cmake/ipc/chat/: CMakeLists.txt  client.cpp  make.sh  server.cpp
project/Cmake/ipc/include/: chat.hpp  main.h  message_queue.hpp  mq.h  mq.hpp  pipe.h  pipe.hpp  share_memory.hpp  shm.h  shm.hpp  signal.hpp  upipe.h  upipe.hpp
project/Cmake/ipc/include/socket/: client.hpp  server.hpp
project/Cmake/ipc/ref/: mq.cpp  pipe.cpp  shm.cpp  signal.cpp  socket.cpp  upipe.cpp
project/Cmake/ipc/src/: MessageQueue.cpp  Pipe.cpp  ShareMemory.cpp  Signal.cpp  UnnamedPipe.cpp  main.cpp  mq.cpp  pipe.cpp  shm.cpp  signal.cpp  socket_client.cpp  socket_server.cpp  upipe.cpp
project/Cmake/localChatSocket/: client.cpp  run.sh  server.cpp  signal.cpp
project/Cmake/shareLibrary/: CMakeLists.txt  vcpkg.json
project/Cmake/shareLibrary/include/: share.h
project/Cmake/shareLibrary/src/: main.cpp  share.cpp
project/Cmake/vcpkg/: vcpkg.json
project/Cmake/vcpkg/src/: main.cpp
project/StartBoost/: StartBoost.pro  main.cpp
project/gTest/: CMakeLists.txt  run.sh
project/gTest/src/: Calculator.cpp  Calculator.h  main.cpp  main.h
project/gTest/src/test/: MainTest.cpp
project/gTest/src/test/mock/: MockCalculator.h
remote-worker-ssh/: d.sh  deploy.sh  dlt-runtime-context.cfg  dlt-runtime-context.cfg.bak  forward-log.bat  reduce-dlt.bat  root.bat  test.bat  upload.sh
remote-worker-ssh/HMI_SLDD/: HMI-SDD.puml  Led-Brightness-Control.puml  Led-Pattern-Control.puml  guildePlantUML.puml
remote-worker-ssh/Test HMI/: TestCase.xlsx
remote-worker-ssh/tmp/: hmi-service_1.0-r0_armv7at2hf-neon.ipk  libhmihal0_1.0-r0_armv7at2hf-neon.ipk  libihmi0_1.0-r0_armv7at2hf-neon.ipk
vscode/: atomic.cpp  constructor.cpp  container.cpp  lock.cpp  main.cpp  semaphore.cpp  stl.cpp  test.cpp  thread.cpp
